Fix, images, and align items

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -31,10 +31,19 @@ h1, h2, h3, h4, h5, h6{
 header{
     background-color:var(--primary-color);
     padding: 20px;
+    text-align: center;
+}
+
+header nav{
+    display: flex;
+    justify-content: space-around;
 }
 
 header nav a{
     text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px;
+    text-align: center;
 }
 
 header nav a:link, nav a:visited{
@@ -66,7 +75,7 @@ p{
     right: 0;
     text-align: center;
     background: radial-gradient(#eee, #ccc);
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     padding: 0.65rem;
     box-shadow: 0 0 30px #111;
     opacity: 0.8;
@@ -77,7 +86,7 @@ p{
     bottom: 25px;
     left: 0;
     background: radial-gradient(#eee, #ccc);
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     padding: 0.65rem;
     box-shadow: 0 0 30px #111;
     opacity: 0.8;
@@ -100,7 +109,28 @@ p{
     width: 100%;
     height: auto;
     object-fit: cover;
+    object-position: left;
 
 }
 
+main section{
+    text-align: center;
+}
 
+footer{
+    background-color: var(--primary-color);
+}
+
+footer p{
+    text-align: center;
+    color: var(--accent2-color);
+}
+
+.sociallinks{
+    text-align: center;
+    filter: invert(1);
+}
+
+.sociallinks a{
+    padding: 10px;;
+}
